--- a/Kaiserreich Korean Translation/localisation/KR_Loading_Tips_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Loading_Tips_l_english.yml
@@ -1,47 +1,47 @@
 l_english:
-LOADING_TIP_0:0 "In one word - we do not want to place anyone into the shadow, but we also claim our place in the sun.\n- German Foreign Minister Bernhard von Bülow, 1897"
-LOADING_TIP_1:0 "Despite the fact that we have no such fleet as we should have, we conquered for ourselves a place in the sun. It will be my task to see that this place in the sun shall remain our undisputed possession. \n- Kaiser Wilhelm II"
+LOADING_TIP_0:0 "한 마디로 말해서, 우리는 그 누구도 세상에 드러내고 싶지 않지만, 또한 우리의 지위를 태양 아래 두고 주장하고 싶다.\n- 독일 외무부 장관 베른하르트 폰 뷜로, 1897년"
+LOADING_TIP_1:0 "우리가 가져야 할 함대가 없다는 사실에도 불구하고, 우리는 스스로 태양 아래 있는 곳을 정복했다. 햇빛이 내리쬐는 이곳을 계속 소유할 수 있도록 하는 것이 나의 임무일 것이다. \n- 카이저 빌헬름 2세"
 LOADING_TIP_2:0 "나의 '부의 공유' 정책만이 유일하게 생디칼리즘으로 부터 국가를 보호 할 수 있는 방어수단입니다. \n- 휴이 롱"
 LOADING_TIP_3:0 "사회주의는 무시무시하고 장엄한 것으로 남아야합니다.\n - 베니토 무솔리니"
-LOADING_TIP_4:0 "Our aim is the creation in our country of a society of free and equal man, where no man will ever exploit another man. \n- Palmiro Togliatti"
+LOADING_TIP_4:0 "우리의 목표는 자유롭고 평등한 인간이 속한 사회를 건설하는 것인데, 그곳에서는 그 누구도 다른 사람을 착취하지 않을 것이다. \n- 팔미로 톨리아티"
 LOADING_TIP_5:0 "우리는 영국에서 함께 불꽃이 꺼지지 않을 시대에 바람을 불었다.\n- 오스왈드 모즐리"
 LOADING_TIP_6:0 "나는 한번도 옳은 사람이 아니었습니다. 나는 왼쪽으로 치우져있었고, 현재는 정치의 중심에 있습니다. \n- 오스왈드 모즐리"
-LOADING_TIP_7:0 "To prevent a catastrophe the Tsar himself must be removed, by force if there is no other way. \n- Aleksandr Kerensky, 1917"
-LOADING_TIP_8:0 "The policy of the Bolsheviks is demagogic and criminal, in their exploitation of the popular discontent. \n- Aleksandr Kerensky, 1917"
-LOADING_TIP_9:0 "Without the Empire we should be tossed like a cork in the cross current of world politics. It is at once our sword and our shield. \n- Billy Hughes"
+LOADING_TIP_7:0 "재앙을 막기위한 다른 방법이 없다면, 황제는 자신도 스스로 제거해야 한다. \n- 알렉산드르 케렌스키, 1917년"
+LOADING_TIP_8:0 "볼셰비키의 정책은 민중의 불만을 착취하는 데 있어서 선동적이고 범죄적이다. \n- 알렉산드르 케렌스키, 1917년"
+LOADING_TIP_9:0 "제국이 없다면 우리는 세계 정치의 위기를 초래한다. 그것은 곧 우리의 검과 방패가 된다. \n- 빌리 휴즈"
 LOADING_TIP_10:0 "필요하다면 징병을 하겠지만, 반드시 징병 하는 것은 아닙니다.\n- 윌리엄 리옹 매켄지 킹"
-LOADING_TIP_11:0 "I look upon him as the greatest criminal known for having plunged the world into war. \n- King George V on his cousin, Kaiser Wilhelm II"
-LOADING_TIP_12:0 "After I am dead, the boy will ruin himself in twelve months. \n- attributed to George V of United Kingdom about his son Edward, Prince of Wales"
-LOADING_TIP_13:0 "I would like to see the word nationalisation banned from the socialist vocabulary. \n- Philip Snowden"
-LOADING_TIP_14:0 "Ah, goddammit, it's time to put an end to this, We've moaned and suffered long enough, No half-way war, No more cowardly pity, Death to the bourgeoisie! \n-Sébastien Faure, La Ravachole"
-LOADING_TIP_15:0 "The old world is dying away, and the new world struggles to come forth - now is the time of monsters. \n- Antonio Gramsci"
-LOADING_TIP_16:0 "We, who are Socialists, must hope that out of this horror of bloodshed and dire destruction will come far-reaching social changes and a long step forward towards our goal of Peace among Men. \n- Jack Reed, 1914"
-LOADING_TIP_17:0 "The United States must be neutral in fact as well as in name...We must be impartial in thought as well as in action. \n- Woodrow Wilson, 19 August 1914"
+LOADING_TIP_11:0 "나는 그를 세계를 전쟁에 빠뜨린 것으로 알려진 가장 위대한 범죄자로 간주한다. \n- 조지 5세가 그의 사촌, 카이저 빌헬름 2세에게"
+LOADING_TIP_12:0 "내가 죽은 후에, 그 아이는 12개월 안에 파멸할 것이다. \n- 영국의 조지 5세가 그의 아들, 웨일즈의 왕자 에드워드에 대해서"
+LOADING_TIP_13:0 "나는 국유화라는 단어가 사회주의 어휘에서 금지되기를 바란다. \n- 필립 스노든"
+LOADING_TIP_14:0 "아, 이런 젠장, 이제 그만 둘 때가 됐어, 우리는 충분히 신음하고 고통 받아 왔어, 불완전한 전쟁은 안돼, 더 이상 비겁한 동정도 하지 말고, 부르주아에게 죽음을! \n- 세바스티앙 포르, La Ravachole(무정부주의자의 노래)"
+LOADING_TIP_15:0 "오래된 세상은 사라지고 있고, 새로운 세상은 나오기 위해 안간힘을 쓰고 있다 - 지금은 괴물들의 시대이다. \n- 안토니오 그람시"
+LOADING_TIP_16:0 "사회 주의자인 우리는 유혈 사태와 끔찍한 파괴의 공포에서 벗어나 광범위한 사회적 변화가 일어나고 인류의 평화를 향한 목표를 향해 한발 더 다가가기를 희망해야 한다. \n- 잭 리드, 1914년"
+LOADING_TIP_17:0 "미국은 이름뿐만이 아니라 중립국이어야 한다...우리는 행동할 뿐만 아니라 사상에서도 공정해야 한다. \n- 우드로 윌슨, 1914년 8월 19일"
 LOADING_TIP_18:0 "국제주의에 대해선 신경을 끄고 국가의 번영에 대한 관심을 가집시다 \n- 찰스 에드워드 코울린 신부"
-LOADING_TIP_19:0 "The party must be ready to put into its program the definite statement that mass action culminates in open insurrection and armed conflict with the capitalist state. \n- William Z. Foster"
-LOADING_TIP_20:0 "At heart and in their daily action the trade unions are revolutionary. Their unchangeable policy is to withhold from the exploiters all they have the power to. That is the true meaning of the trade union movement. \n- William Z. Foster"
-LOADING_TIP_21:0 "I am the last monarch of the old school. It's my job to protect my peoples from their politicians! \n- Franz Joseph I to Theodore Roosevelt, 1910"
-LOADING_TIP_22:0 "People always have been the foolish victims of deception and self-deception in politics, and they always will be, until they have learned to seek out the interests of some class or other behind all phrases, declarations and promises. \n- Vladimir Lenin"
-LOADING_TIP_23:0 "At a time of revolution we cannot allow freedom for the enemies of the people and of the revolution. That is a surely clear, irrefutable conclusion. \n- Nikolai Bukharin"
-LOADING_TIP_24:0 "The ideally non-violent state will be an ordered anarchy. That State is the best governed which is governed the least. \n- Mohandas Karamchand Gandhi"
-LOADING_TIP_25:0 "Does one have to be God-fearing and Christian to be decent? \n- Louise Bryant"
-LOADING_TIP_26:0 "Looking at the world as a whole, the drift for many decades has been not towards anarchy but towards the re-imposition of slavery \n- Eric Blair"
-LOADING_TIP_27:0 "A community is democratic only when the humblest and weakest person can enjoy the highest civil, economic, and social rights that the biggest and most powerful possess. \n- Asa Randolph"
-LOADING_TIP_28:0 "History has a long-range perspective. It ultimately passes stern judgement on tyrants and vindicates those who fought, suffered, were imprisoned, and died for human freedom, against political oppression and economic slavery. \n- Elizabeth Gurley Flynn"
-LOADING_TIP_29:0 "A soldier who is politically conscious that he is right and who has a feeling of community with his society... will do his job well. \n- William Aalto"
+LOADING_TIP_19:0 "정당은 반드시 그들의 계획에 대량 살상이 공개적인 반란과 자본주의 국가와의 무력 충돌로 절정에 이르게 한다는 분명한 성명을 넣을 준비가 되어 있어야 한다. \n- 윌리엄 Z. 포스터"
+LOADING_TIP_20:0 "마음 속으로 그리고 그들의 일상적인 행동에 있어서 노동 조합은 혁명적이다. 그들의 불변의 정책은 착취자들로부터 그들이 할 수 있는 모든 권한을 박탈하는 것이다. 그것이 노조 운동의 진정한 의미이다. \n- 윌리엄 Z. 포스터"
+LOADING_TIP_21:0 "나는 전통의 마지막 군주이다. 내 일은 국민들을 정치인들로부터 보호하는 거다! \n- 프란츠 요제프 1세가 시어도어 루스벨트에게, 1910년"
+LOADING_TIP_22:0 "사람들은 언제나 정치의 속임수와 자기 기만의 어리석은 희생자였고, 그들은 어떤 계층의 이익을 추구하는 모든 말, 선언, 약속을 배우기 전까지는 항상 그럴 것이다. \n- 블라디미르 레닌"
+LOADING_TIP_23:0 "혁명의 시기에 우리는 국민과 혁명의 적들에게 자유를 허용할 수 없다. 그것은 분명하고, 반박할 수 없는 결론이다. \n- 니콜라이 부하린"
+LOADING_TIP_24:0 "이상적인 비폭력적인 상태는 질서 정연한 무질서가 될 것이다. 그 국가는 가장 통치를 잘 하는 국가이다. \n- 마하트마 간디"
+LOADING_TIP_25:0 "품위를 지키기 위해서는 신적이고 기독교적이어야 할까? \n- 루이스 브라이언트"
+LOADING_TIP_26:0 "세상을 전체적으로 보면, 수십년 동안 이 세상의 대세는 무정부 상태가 아니라 노예 제도의 재침략을 향한 것이었다. \n- 에릭 블레어"
+LOADING_TIP_27:0 "공동체는 가장 가난하고 약한 사람들이 가장 크고 가장 강력한 사람들이 소유한 가장 높은 시민적, 경제적, 사회적 권리를 누릴 수 있을 때만 민주적이다. \n- 아사 랜돌프"
+LOADING_TIP_28:0 "역사는 장기적인 관점을 지니고 있다. 그것은 궁극적으로 독재자에 대한 엄중한 판단을 내리고, 정치적 억압과 경제적 노예에 맞서 싸우고, 고통을 겪고, 감옥에 가고, 인간의 자유를 위해 죽은 사람들을 모욕한다. \n- 엘리자베스 걸리 플린"
+LOADING_TIP_29:0 "자신이 옳다고 정치적으로 인식하고 있고 사회에 대해 공동체 의식을 가지고 있는 군인... 그는 일을 잘 해낼 것이다. \n- 윌리엄 알토"
 LOADING_TIP_30:0 "가끔은 내 상관과 싸우는 것이 프랑스와 싸우는 것보다 힘들 때가 있다 \n- 하인츠 구데리안"
-LOADING_TIP_31:0 "No bastard ever won a war by dying for his country. He won it by making the other poor dumb bastard die for his country. \n- George Patton"
-LOADING_TIP_32:0 "My measures will not be crippled by any bureaucracy. Here I don't have to worry about Justice; my mission is only to destroy and to exterminate; nothing more. \n- Hermann von Goering"
-LOADING_TIP_33:0 "The Russian people are suffering from economic fatigue and from disillusionment with the Allies! The world thinks the Russian Revolution is at an end. Do not be mistaken. The Russian Revolution is just beginning. \n- Aleksandr Kerensky"
-LOADING_TIP_34:0 "Our threat is from the insidious forces working from within which have already so drastically altered the character of our free institutions — those institutions we proudly called the American way of life.\n- Douglas MacArthur"
+LOADING_TIP_31:0 "어떤 나쁜놈도 조국을 위해 목숨을 바쳐 전쟁에서 이긴 적이 없다. 그는 다른 나라의 가난하고 멍청한 나쁜놈을 조국을 위해 죽게 만들어서 이겼다. \n- 조지 패튼"
+LOADING_TIP_32:0 "나의 조치들은 어떠한 관료주의에 의해서도 불구가 되지 않을 것이다. 여기서 나는 정의에 대해 걱정할 필요가 없다. 나의 임무는 단지 파괴하고 멸망시키는 것이다. 모든것을. \n- 헤르만 폰 괴링"
+LOADING_TIP_33:0 "러시아 사람들은 경제적 피로와 연합군에 대한 환멸로 고통 받고 있습니다! 세계는 러시아 혁명이 끝났다고 생각한다. 오해하지 마라. 러시아 혁명은 이제 막 시작했다. \n- 알렉산드르 케렌스키"
+LOADING_TIP_34:0 "우리의 위협은 이미 우리의 자유로운 제도의 성격을 급격하게 바꾸어 놓은 내부로부터의 교활한 힘으로부터 온다 — 우리가 자랑스럽게 미국적 삶이라고 부르던 그 제도들 \n- 더글러스 맥아더"
 LOADING_TIP_35:0 "프랑스는 친구가 없다, 오직 이해관계 뿐이다. \n- 샤를 드골"
 LOADING_TIP_36:0 "맞습니다. 유럽입니다, 대서양에서 우랄산맥에 이르기까지, 전부 유럽입니다. 유럽 전체가 세계의 운명을 결정할 것입니다. \n- 샤를 드골"
-LOADING_TIP_37:0 "I'm reading the Military Campigns of the Kingdom of Wu. They didn't have any machine guns or airplanes then. \n- Wu Peifu"
-LOADING_TIP_38:0 "If you don't have ammunition, you still have bayonets. Fix bayonets! \n- Lieutenant Colonel Mustafa Kemal Bey"
-LOADING_TIP_39:0 "My name is surrounded with such hate and fear that no one can judge what is the truth and what is false, what is history and what is myth. \n- Baron Roman von Ungern-Sternberg"
-LOADING_TIP_40:0 "It would appear that we select presidents as we select jurors, on the ground that they have no opinions that can be discovered. \n- Norman Thomas"
-LOADING_TIP_41:0 "Freedom means Freedom for the Group, not Freedom for the Individual. Men must not be slaves to other men, but they must be slaves to their group. For, if they are not slaves to their own group, they will assuredly become slaves to some other. \n- Liang Qichao"
-LOADING_TIP_42:0 "When the white man turns tyrant, it is his own freedom that he destroys. He becomes a... posing dummy, the shallow figure of a sahib... He wears a mask, and his face grows to fit it. \n- Eric Blair"
+LOADING_TIP_37:0 "나는 오나라의 군사 병법서를 읽고 있다. 그들은 당시에 기관총이나 비행기가 없었다. \n- 우 페이푸"
+LOADING_TIP_38:0 "탄약이 없다면, 총검이 있다. 착검! \n- 무스타파 케말 베이 중령"
+LOADING_TIP_39:0 "제 이름은 증오와 두려움으로 둘러 싸여 있어서, 그 누구도 무엇이 진실이고 무엇이 거짓이며, 무엇이 역사이고, 무엇이 신화인지 판단할 수 없습니다. \n- 로만 폰 운베른슈테른베르크 남작"
+LOADING_TIP_40:0 "우리가 배심원을 선발 할 때 대통령이 선출될 수 있는다는 근거가 없다는 것을 대통령이 선택하는 것처럼 보입니다. \n- 노먼 토마스"
+LOADING_TIP_41:0 "자유는 개인의 자유가 아닌 단체의 자유를 의미한다. 사람은 다른 사람들의 노예가 되어서는 안 되지만, 그들의 집단의 노예가 되어야 한다. 그들이 자기 집단의 노예가 아니라면, 그들은 틀림없이 다른 사람들의 노예가 될 것이다. \n- 량치차오"
+LOADING_TIP_42:0 "백인이 폭군으로 변하면, 그가 파괴하는 것은 그의 자유다. 그는... 포즈를 취한 인형이 되고, 사히브의 얄팍한 인물이 될 것이다... 그는 가면을 쓰고, 그의 얼굴은 그것에 맞게 자라게된다. \n- 에릭 블레어"
 LOADING_TIP_43:0 "프러시아주의 그것이 적이로다! \n- 조지프 콘레드"
 LOADING_TIP_44:0 "The whole of the Balkans is not worth the bones of a single Pomeranian grenadier. \n- Otto von Bismarck"
 LOADING_TIP_45:0 "Don't you dare let them put me in Westminster Abbey. \n- John McLean"
@@ -51,7 +51,7 @@ LOADING_TIP_48:0 "Names and individuals are unimportant when Germany's final fat
 LOADING_TIP_49:0 "Whoever looks at America will see that the ship is powered by stupidity, corruption, or prejudice. \n- Johann Most"
 LOADING_TIP_50:0 "나는 식민지가 되는 것을 원하지 않기에 제국주의자다. \n- 스티븐 리콕"
 LOADING_TIP_51:0 "낙관론은 비겁하다. \n- 오스발트 슈펭글러"
-LOADING_TIP_52:0 "나의 통치는 헌법이나 총알에 의해서만 끝나야만 한다. \n- 1935년, 알렉산더 케렌스키"
+LOADING_TIP_52:0 "나의 통치는 헌법이나 총알에 의해서만 끝나야만 한다. \n- 1935년, 알렉산드르 케렌스키"
 LOADING_TIP_53:0 "And that is war in a nutshell; the master class has always declared the wars, and the subject class has always fought the battles. \n- Eugene V. Debs"
 LOADING_TIP_54:0 "The Chinese people have only family and clan solidarity; they do not have national spirit \n- Sun Yat-sen (1924)"
 LOADING_TIP_55:0 "In a man to man fight, the winner is he who has one more round in his magazine. \n- Erwin Rommel (1937)"
