--- a/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
@@ -176,55 +176,63 @@ GBR_imperial_war_cabinet:0 "제국 전시 내각"
 GBR_imperial_war_cabinet_desc:0 "제국 전시 내각은 제국 내 군 전력을 조율하기 위해 대전기에 설립되었다. 제국을 재건하는 동안 전쟁이 발발했을 때 제국의 전시 생산을 조율하기 위해 소환될 항구적 제국 전시 내각의 수립을 진행하도록 한다
 "
 GBR_naval_exercises:0 "해군 훈련"
-GBR_naval_exercises_desc:0 "The Royal navy is the backbone of the British Empire and in order to protect and strengthen the empire we should do a series of naval exercises with our dominions in order to strengthen the Royal Navy and her daughter navies of the various dominions. "
-GBR_join_isac:0 "Lead ISAC"
-GBR_join_isac_desc:0 "The Imperial Scientific and Academic Council that was founded during our exile shall be given full support by the British Government. Moreover we should be the ones leading and guiding the council as the rightful centre of the British Empire. "
-GBR_iedc_control:0 "Lead IEDC"
-GBR_iedc_control_desc:0 "The Imperial Economic and Development Council or IEDC was founded during the exile. Now that we have returned to the Home Isles the council should be brought under our control so that we can help guide and lead the IEDC in the economic development of the Empire. "
-GBR_imperial_preference:0 "Imperial Preference"
-GBR_imperial_preference_desc:0 "The Imperial Preference policy would promote free trade between the Empire and her dominions. This shall help make the Empire a free trade zone within the Empire. "
-GBR_sterling_area:0 "Sterling Area"
-GBR_sterling_area_desc:0 "In order to promote trade we should make it so that all of the empire uses the Pound Sterling as their currency. This shall promote economic growth and trade throughout the empire. "
-GBR_south_africa:0 "South Africa Dominion"
-GBR_south_africa_desc:0 "South Africa was once part of the Empire and though they have found themselves a drift since the exile in 1925, we should focus our effort into bringing them back into the empire. "
-GBR_support_dominionists:0 "Support Dominonists"
-GBR_support_dominionists_desc:0 "The dominionist party is in power within South Africa, we should publicly support them and seek better relations with them. As they are friendly with the british government, hopefully our support can bring them back to the empire. "
-GBR_third_boer_war:0 "Third Boer War"
-GBR_third_boer_war_desc:0 "The last war between the British and the Afrikaners was the second Boer War. With South Africa being controlled by the anti-british National Party, we must prepare for the Third Boer War in order to bring South Africa back into the empire. "
-GBR_south_africa_act:0 "South Africa Act"
-GBR_south_africa_act_desc:0 "With South Africa now back under our influence we should work to promote our influence to make sure that South Africa remains within the empire and will not leave us again."
-GBR_canadian_governor_general:0 "Canadian Governor-General"
-GBR_canadian_governor_general_desc:0 "With the liberation of the United Kingdom now complete and now that the King is back in London, we should see about getting a Governor General in Ottawa. The Prime Minister shall write to the King and the British Government about appointing a General Governor."
-GBR_empire_act:0 "The Empire Act"
-GBR_empire_act_desc:0 "This year's Imperial Conference will be where will propose the Empire act to see about putting into fruition the long held dream of the Imperial Federation. "
+GBR_naval_exercises_desc:0 "왕립 해군은 대영제국의 주축이이며 제국을 보호하고 강화하기 위해 우리는 자치령들과 함께하는 일련의 해군 훈련을 진
+행해야 하는데 이는 왕립 해군과 다양한 자치령들 내의 자녀해군을 강화하기 위해서이다.
+"
+GBR_join_isac:0 "ISAC를 이끌다"
+GBR_join_isac_desc:0 "우리의 망명 기간동안 설립되었던 제국 과학 및 학술 협의회는 영국 정부의 최대한의 지원을 받아야 할 것이다. 추가적으
+로 우리는 대영제국의 정당한 중심부로써 이 협의회를 이끌고 지도해야 한다."
+GBR_iedc_control:0 "IEDC를 이끌다"
+GBR_iedc_control_desc:0 "제국 경제 및 개발 협의회 혹은 IEDC는 우리의 망명 기간동안 설립되었다. 이제 우리가 본토에 돌아왔고 협의회는 우리의 
+통제 하에 있으며 따라서 우리는 제국의 경제 개발을 위해 IEDC의 운영과 지도에 도움을 줄 수 있다."
+GBR_imperial_preference:0 "제국 내 특혜"
+GBR_imperial_preference_desc:0 "제국 내 특혜 정책은 제국내, 그리고 자치령간의 자유 무역을 촉진할 것이다. 이는 제국 내에서의 자유 무역 지대를 구성하는데 도움을 줄 것이다."
+GBR_sterling_area:0 "스털링 지역"
+GBR_sterling_area_desc:0 "무역을 촉진시키기 위해 제국 구성원들은 모두 파운드 스털링으로 화폐를 통일해야 한다. 이는 제국 내에서 경제적 성장과 
+무역을 촉진시킬 것이다."
+GBR_south_africa:0 "남아프리카 자치령"
+GBR_south_africa_desc:0 "남아프리카는 한때 우리 제국의 일원이였으며 1925년의 망명 
+이후로 그들 스스로 제국에서 이탈하였으며, 이제 우리는 그들을 다시 제국의 품으로 돌아오도록 노력을 쏟아야 한다."
+GBR_support_dominionists:0 "Dominonists를 지원하다"
+GBR_support_dominionists_desc:0 "dominionist party들은 남아프리카에서 권력을 잡고 있으며, 우리는 공공연하게 그들을 지원하고 그들과의 관계를 증진해야 한다. 그들이 영국 정부에 우호적일 수록,어쩌면 우리의 지원이 그들을 제국으로 돌아오게 할 수 있다. "
+GBR_third_boer_war:0 "3차 보어 전쟁"
+GBR_third_boer_war_desc:0 "가장 최근의 아프리카 개척민들과 영국인들간의 전쟁은 2차 보어 전쟁이였다. 남아프리카는 반 영국 정서를 지닌 National Party에 지배받고 있으며, 우리는 남아프리카가 제국에 돌아오도록 하기 위해 3차 보어 전쟁을 준비해야 한다."
+GBR_south_africa_act:0 "남아프리카 법안"
+GBR_south_africa_act_desc:0 "남아프리카가 우리의 영향력 아래로 돌아왔으므로 이제 우리의 영향력을 강화함으로써 남아프리카가 제국에 남아있고 다시 떠나지 않도록 해야 한다."
+GBR_canadian_governor_general:0 "캐나다인 총독"
+GBR_canadian_governor_general_desc:0 "연합 왕국의 해방의 완수와 함께 왕이 런던에 돌아왔으므로, 우리는 오타와에 총독을 임명해야 한다. 총리는 왕에게 추천서를 보내고 영국 정부는 총독을 임명해야 한다."
+GBR_empire_act:0 "제국 법안"
+GBR_empire_act_desc:0 "올해의 제국 회담은 제국 연합에 대한 이상의 결실을 는 제국 법안이 제안될 것이다. "
 
 ### Rule the Seas Focuses ###
-GBR_securing_the_seas:0 "Rule the Waves"
+GBR_securing_the_seas:0 "바다를 지배하다"
 GBR_securing_the_seas_desc:0 "The nations, not so blest as thee, / Must, in their turns, to tyrants fall; / While thou shalt flourish great and free, / The dread and envy of them all. / 'Rule, Britannia! rule the waves: / 'Britons never will be slaves.'"
-GBR_crush_egypt:0 "Crush Egypt"
-GBR_crush_egypt_desc:0 "In order to control the Canal we must seize it from the Egyptians themselves. War shall settle the issue where words can not."
-GBR_treaty_with_egypt:0 "Treaty with Egypt"
-GBR_treaty_with_egypt_desc:0 "We need control of the Suez Canal, however we are British men and there is no reason to be uncivilized. We can negotiate with the Egyptians for the canal and take it with it that way."
-GBR_secure_the_suez:0 "Secure the Suez"
-GBR_secure_the_suez_desc:0 "Now that we have figured out how to control the suez we should make sure that it is secure. The Germans or other powers in the region may very well try and take the canal from us and we must make sure that it is protected."
-GBR_status_of_singapore:0 "Status of Singapore"
-GBR_status_of_singapore_desc:0 "With the Suez in our control some within the government are asking what about the Lion City, Signapore. Singapore was once a british possession but following the Great War and the 1925 exile it fell into German hands. Now we should ask for it back. "
-GBR_hong_kong_treaty:0 "Hong Kong Treaty"
-GBR_hong_kong_treaty_desc:0 "With Singapore now under our control once again, some are suggesting we seek the Pearl of the Orient, Hong Kong. Thus we should send a proposal to the Legation Cities to try and get the Pearl back within the Crown of the Empire. "
-GBR_treaty_for_gibraltar:0 "Treaty for Gibraltar"
-GBR_treaty_for_gibraltar_desc:0 "The Rock of Gibraltar was for years a part of the empire and must become so again. Thus we should seek a treaty with the Spanish for the region. "
-GBR_take_the_rock:0 "Take the Rock"
-GBR_take_the_rock_desc:0 "The Rock of Gibraltar was for years a part of the empire and must become so again. Thus we should just take Gibraltar by force. "
-GBR_fortify_the_rock:0 "Fortify the Rock"
-GBR_fortify_the_rock_desc:0 "With Gibraltar now back in our possession we must fortify it should war come to the region."
-GBR_status_of_malta:0 "Status of Malta"
-GBR_status_of_malta_desc:0 "With Gibraltar back in our possession some are suggesting we try and reclaim Malta for the Empire. Perhaps we should approach the Germans for the island. "
-GBR_mediterranian_fortress:0 "Begin Mediterranean Fortress"
-GBR_mediterranian_fortress_desc:0 "With Malta in our possession, a plan has been drafted to defend the British Empire in the Mediterranean called the Mediterranean Fortress. The fortress shall help make sure that forevermore that Britannia rules the waves. "
-GBR_complete_mediterranian_fortress:0 "Complete the Mediterranean Fortress"
-GBR_complete_mediterranian_fortress_desc:0 "With Cyprus now back under our control, we can finish the Mediterranean Fortress that we have begun. Cyprus shall be fortified and the Mediterranean will be under influence once again. "
-GBR_status_of_cyprus:0 "Status of Cyprus"
-GBR_status_of_cyprus_desc:0 "With Gibraltar back in our possession some are suggesting we try and reclaim Cyprus for the Empire. Perhaps we should approach the Ottomans for the island."
+GBR_crush_egypt:0 "이집트를 제압하다"
+GBR_crush_egypt_desc:0 "수에즈 운하를 장악하기 위해 우리는 이집트로부터 그것을 점령해야 한다. 말로써 이뤄질 수 없는 이 상황은 전쟁으로 해결될 수 있다."
+GBR_treaty_with_egypt:0 "이집트와의 협약"
+GBR_treaty_with_egypt_desc:0 "우리는 수에즈 운하를 장악해야 하지만, 우리는 영국 신사들이고 비문명적일 이유가 없다. 우리는 이집트인들과 운하에 관하여 협상할 수 있고 그 방법으로 확보할 수 있다."
+GBR_secure_the_suez:0 "수에즈의 확보
+GBR_secure_the_suez_desc:0 "이제 수에즈를 확보할 방법을 알아냈고 이제 우리는 그것이 안전함을 확실히 해야 한다. 독일이나 지역의 다른 강국들이 우리로부터 운하를 빼앗는 시도를 할 것이고 우리는 그것을 확실히 보호해야 한다."
+GBR_status_of_singapore:0 "싱가포르의 상황"
+GBR_status_of_singapore_desc:0 "
+수에즈가 우리의 통제 하에 있고 몇몇 정부 기관은 싱가포르,또는 사자의 도시에 관해 질문하고 있다. 싱가포르는 한때 영국의 소유였으나 대전과 1925년의 망명 후 독일의 손 안에 떨어졌다. 이제 우리는 그것을 돌려달라고 요구할 때이다."
+GBR_hong_kong_treaty:0 "홍콩 협약"
+GBR_hong_kong_treaty_desc:0 "
+싱가포르가 다시 한번 우리의 통제 하에 있고, 몇몇은 우린 동방의 진주인, 홍콩을 찾아야 한다고 주장한다. 그러므로 우리는 공사관 도시에 제국의 왕관에 존재했던 진주를 돌려받기를 원한다는 제안을 보내야 한다."
+GBR_treaty_for_gibraltar:0 "지브롤터에 대한 협약"
+GBR_treaty_for_gibraltar_desc:0 "지브롤터는 오랫동안 제국의 일부분이였고 다시 일부분이 되어야 한다. 그러므로 우리는 스페인과 그 지역에 관한 협약을 맺어야 한다. "
+GBR_take_the_rock:0 "지브롤터를 탈환하다"
+GBR_take_the_rock_desc:0 "지브롤터는 오랫동안 제국의 일부분이였고 다시 일부분이 되어야 한다. 그러므로 우리는 지브롤터를 무력을 통해 되찾아야 한다. "
+GBR_fortify_the_rock:0 "지브롤터를 요새화하다"
+GBR_fortify_the_rock_desc:0 "지브롤터가 다시 한번 우리의 소유가 되었으니 이제 그 지역에서 벌어질 전쟁에 대비하기 위해 요새화를 해야 한다."
+GBR_status_of_malta:0 "몰타의 상황"
+GBR_status_of_malta_desc:0 "지브롤터가 다시 한번 우리의 소유가 되었고 몇몇은 제국을 위해 몰타를 확보해야 한다고 주장한다. 아마 우리는 이 섬에 대해서 독일과 접촉할 수 있을 것이다. "
+GBR_mediterranian_fortress:0 "지중해 요새의 시작"
+GBR_mediterranian_fortress_desc:0 "몰타가 우리의 소유가 되었으므로, 지중해에서의 제국 수비를 위한 소위 지중해 요새라는 계획이 발안되었다. 그 요새는 브리타니아의 해상 우세를 언제나 확고하게 해 줄 것이다. "
+GBR_complete_mediterranian_fortress:0 "지중해 요새의 완료"
+GBR_complete_mediterranian_fortress_desc:0 "키프로스가 다시한번 우리의 통제 하에 있으니, 우리는 시작했던 지중해 요새 계획을 마무리지을 수 있다. 키프로스느 요새화되고 지중해는 우리의 영향력 하에 있을 것이다."
+GBR_status_of_cyprus:0 "키프로스의 상태"
+GBR_status_of_cyprus_desc:0 "지브롤터가 우리의 소유가 되었으므로 몇몇은 제국을 위해 키프로스를 확보해야 한다고 주장한다. 아마 우리는 이 섬에 대해서 오스만과 접촉할 수 있을 것이다."
 
 ### Flags/ Opinions ###
 CAN_raac_created_expanded:0 "Royal Atlantic Aeronautics Corporation Expansion"
