--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -1,6 +1,6 @@
 l_english:
 
-worldnews.1.t:0 "2차  내전"
+worldnews.1.t:0 "2차 미국 내전"
 worldnews.1.d:0 "교육받지 못 한 외국인들에게는 미국의 위기가 갑자기 발생한것으로 보일 수 있지만, 전문가들은 수년의 시간에 걸처 내전이 발발했다는것에 동의합니다. 1925 년 뉴욕 ​​증권 거래소가 붕괴한 이래로 미국 경제는 꾸준히 침체기에 접어 들었습니다. \n이제 미국은 옛 정부의 지지자들, 생디칼리스트인 아메리카 노동 연합과 보수적이고 외국인을 혐오하는 미주 연방간의 3 자간 내전으로 넘어갔습니다. 이미 유럽에서 온 자원 봉사자들이 자신들이 좋아하는 진영을 위해 싸운다는 보고가 있었습니다. 2차 아메리카 내전은 인류에게 힘든 시기에 세계의 강대국들간의 열릴 많은 전쟁 중 첫 번째 전쟁 일 수 있습니다."
 worldnews.1.a:0 "골치 아픈 사건이 터졌군."
 
@@ -710,7 +710,7 @@ worldnews.274.a:0 "No! How can this be?!"
 worldnews.274.b:0 "Our commanders have done well"
 worldnews.274.c:0 "The [old_controller.GetAdjective] situation appears dire"
 
-worldnews.275.t:0 "The Fall of Havana"
+worldnews.275.t:0 "아바나 함락"
 worldnews.275.d:0 "[old_controller.GetAdjective] soldiers and militants have been driven from Havana into the countryside or into the old Spanish forts in the city where, after hours of merciless bombardment, they have finally surrendered to [new_controller.GetAdjective] forces. With the raising of the [new_controller.GetAdjective] flag over El Morro Castle, commonly depicted in many postcards, the control of the entrance to the Havana harbour has been secured by the invaders. [old_controller.GetAdjective] forces, while not as numerous or well-equipped as their enemy, managed to force a brutal fight as they fought block by block against efforts by the forces of [new_controller.GetNameDef] to take the city for as long as they could. In the end, their valiant resistance was only fleeting, as Havana is now in the hands of a foreign power."
 worldnews.275.a:0 "Tell the people, to fight on for their freedom..."
 worldnews.275.b:0 "The Americans repeat history again, it seems."
@@ -718,51 +718,51 @@ worldnews.275.c:0 "Their defiance, was never going to prevail."
 worldnews.275.e:0 "It seems that Cuba, has chosen the wrong side..."
 worldnews.275.f:0 "The island will be ours , shortly."
 
-worldnews.276.t:0 "The Fall of Rome"
+worldnews.276.t:0 "로마 함락"
 worldnews.276.d:0 "A [new_controller.GetAdjective] general just secured the surrender of the Eternal City. For days, [new_controller.GetAdjective] troops had fought through the suburbs, and while some of the swampy areas were still under [old_controller.GetAdjective] control, the major highway through the centre of Rome and the Vatican city was completely locked down. [old_controller.GetAdjective] soldiers have been seeing dispersing into the low foothills surrounding the ancient capital of the Roman Empire.\n\n[new_controller.GetNameDef] has been careful to announce that special military police are on hand in the city to prevent the looting of Saint Peter's Basicilica and the Pantheon, and they are in negotiation with the Pope to see what autonomy the Vatican can retain while under [new_controller.GetAdjective] occupation."
 worldnews.276.a:0 "Rome is lost!"
 worldnews.276.b:0 "Finally Rome is ours!"
 worldnews.276.c:0 "How will [old_controller.GetNameDef] recover from this?"
 
-worldnews.277.t:0 "The Fall of Vienna"
+worldnews.277.t:0 "빈 함락"
 worldnews.277.d:0 "Vienna has blissfully been spared occupation by a foreign power for over 500 years...until today. A few days ago, the [new_controller.GetAdjective] army pinned the remaining [old_controller.GetAdjective] soldiers on the banks of the Danube, and rumour has it that the [old_controller.GetAdjective] royal family fled while they could. Now the city is completely controlled by [new_controller.GetNameDef], its many artists and musicians living in apprehension of what will become of this cultural bastion of Europe.\n\n[new_controller.GetNameDef] is planning a great military parade around the Ringstrasse in celebration of this massive military feat, and the [new_controller.GetAdjective] general in charge of the occupation is going to address citizens from the balcony off of Neue Burg to try to ease the worries of a population worn by weeks of fighting."
 worldnews.277.a:0 "Vienna has fallen? How can this be?!"
 worldnews.277.b:0 "Finally Vienna is ours!"
 worldnews.277.c:0 "[old_controller.GetNameDef] has fallen far, it seems..."
 
-worldnews.278.t:0 "The Fall of Beijing"
+worldnews.278.t:0 "베이징 함락"
 worldnews.278.d:0 "After days of high-intensity fighting in the capital suburbs, [new_controller.GetAdjective] troops finally scaled the walls of the Outer City, scattering the defenders and making further defence of the capital all but untenable. With rail lines into and out of the city thoroughly cut, the remaining [old_controller.GetAdjective] forces quickly thinned as deserting soldiers melted into the urban population\n\nWhile [new_controller.GetAdjective] colours now fly over Tiannanmen Gate, the flames at Zhengyangmen send towering columns of thick black smoke into the sky, its sad symbolism lost on few among the war-weary population. China can only hope that the city's new occupiers, one of many since the turn of the century, will finally restore some modicum of peace and order."
 worldnews.278.a:0 "Beijing has fallen? How can this be?!"
 worldnews.278.b:0 "The Forbidden City is ours!"
 worldnews.278.c:0 "It seems the [old_controller.GetAdjective] situation has grown dire indeed"
 
-worldnews.279.t:0 "The Fall of Shanghai"
+worldnews.279.t:0 "상하이함락"
 worldnews.279.d.china:0 "It has been over seventy years since a Chinese person could stand on the Bund and truly call it their own, but thanks to the efforts of [new_controller.GetAdjective] troops, a new flag flies proudly from the top of the Customs Building. Despite the city's international protections, the victory came somewhat easily, as Shanghai's police forces and limited garrison could put up little resistance against a real army. The general population barely resisted themselves, and their non-cooperation cannot have aided already bare-bones defences.\n\nThe international city's future now seems unclear, as while unification will undoubtedly solve a great many social concerns, its prosperity has always been built on the backs of trade and foreign investment. Uncertainty reigns, and the futures of the city's foreign residents are also in doubt."
 worldnews.279.d.other:0 "Despite the city's nominal international protections, [new_controller.GetAdjective] troops seized Shanghai today, rapidly overwhelming the local police and garrison forces, and raising their banners across the Bund. Only a few years ago, such an action would almost certainly be met by international outrage, but rising tensions and outright conflict elsewhere have left few able to offer meaningful protection to the [old_controller.GetNameDef] people.\n\n[new_controller.GetAdjective] soldiers have already begun the process of looting the areas outside the old International Settlement, and taking other liberties with the residents, while most foreigners are thus far left unscathed but not without worry. Uncertainty reigns, as the city's prosperity has long been built upon its reputation as a safe and stable centre for commerce."
 worldnews.279.a:0 "We will retake the city, no matter what"
 worldnews.279.b:0 "Finally Shanghai is ours!"
 worldnews.279.c:0 "Will the chaos in China never end?"
 
-worldnews.280.t:0 "The Fall of Warsaw"
+worldnews.280.t:0 "바르샤바 함락"
 worldnews.280.d:0 "Once described as 'The Paris of the East' during the Renaissance, Warsaw has hit rough times in recent memory. There was hope after the Weltkrieg of renewal but, alas, fate has not been kind, as the [old_controller.GetAdjective] army collapsed trying to defend the city from both sides of the Vistula river from advancing [new_controller.GetAdjective] forces.\n\nIn a bitter twist to old memories, the Royal Castle in Warsaw has been plundered again by [old_controller.GetAdjective] soldiers before they fled the city, according to [new_controller.GetNameDef]. [old_controller.GetNameDef] hotly contests this, claiming [new_controller.GetAdjective] troops ransacked the Palace after heavy fighting. Regardless, with the fall of its capital, the future of [old_controller.GetNameDef] is in jeopardy."
 worldnews.280.a:0 "Not Warsaw!"
 worldnews.280.b:0 "Finally Warsaw is ours!"
 worldnews.280.c:0 "I see..."
 
-worldnews.281.t:0 "The Fall of Sydney"
+worldnews.281.t:0 "시드니 함락"
 worldnews.281.d.siam:0 "Further expanding on its conquests in the south, [new_controller.GetNameDef] has seized Sydney in Australasia. Local defenders were forced to retreat across the Sydney Harbour Bridge to new positions on Observatory Hill, but attempts to demolish the bridge were thwarted by advancing [new_controller.GetAdjective] forces.\n\nThe [new_controller.GetAdjective] war flag can now be seen hanging from the Sydney Town Hall, which serves as the headquarters of the city's new military administration, and the Sarawat Taharn military police are maintaining a watchful eye on the streets."
 worldnews.281.d.other:0 "When the foothills outside the Blue Mountains were lost to the invading [new_controller.GetAdjective] army, it was only a matter of time before the city fell. Through a series of controlled engagements, [old_controller.GetAdjective] forces pulled back slowly, and by yesterday made it to the docks, but with the capture of the Sydney Harbour Bridge (which the defenders didn't destroy due to its significance to the people of the capital) their commander has negotiated a ceasefire.\n\nOrginally a city of released British inmates, Sydney is experiencing bitter irony as the city itself is now a prison. Even worse, military experts predict this could be the beginning of the end of [old_controller.GetNameDef], as the loss of such a vital city is a tough blow to bear."
 worldnews.281.a:0 "We shall return to Sydney soon enough"
 worldnews.281.b:0 "Finally Sydney is ours!"
 worldnews.281.c:0 "The [old_controller.GetAdjective] situation is dire"
 
-worldnews.282.t:0 "The Fall of Mexico City"
+worldnews.282.t:0 "멕시코시티 함락"
 worldnews.282.d:0 "Mexico city, the oldest capital in North America and the 5th-largest by population, fell today to invading [new_controller.GetAdjective] forces. They encircled the city and then moved into the lake bed from the west, cutting the major transportation arteries through the lower areas and forcing [old_controller.GetAdjective] defenders to bleed off into the foothills to the east. As of today, the general in charge of the [new_controller.GetAdjective] occupation was sighted entering the National Palace to negotiate with the governor for a ceasefire.\n\nRumours claim [new_controller.GetAdjective] troops are touring the old Aztec ruins and picking up 'free' souvenirs for themselves, and now it looks like the survivors of Spanish tyranny will learn to live under the yoke of [new_controller.GetNameDef] control."
 worldnews.282.a:0 "It does not end here"
 worldnews.282.b:0 "The heart of Mexico is ours!"
 worldnews.282.c:0 "I see..."
 
-worldnews.283.t:0 "The Fall of Algiers"
+worldnews.283.t:0 "알제 함락"
 worldnews.283.d:0 "Reports from the old city of Algiers, capital of the French government in exile since 1919 tell us of its fall under the advancing [new_controller.GetAdjective] troops. After progressing slowly although efficiently through the great colonial avenues near the Coast [new_controller.GetNameDef] forces met heavier resistance when leaving the sight of the bay in the more popular districts of Algiers' heights. Fierceful fights have taken place between [new_controller.GetAdjective] and [old_controller.GetAdjective] soldiers especially in the popular European district of Bab-El-Oued and in the famous Notre-Dame-D'Afrique Basilica but finally at dawn most of the city had fallen and the last pockets of resistance were getting eliminated in the Casbah. The sun rising on the bay unveiled a city under a new protector."
 worldnews.283.a.commune:0 "We can't let the Communards destroy the last bastion of the True France!"
 worldnews.283.a:0 "Is this the end of our dream of reconquest?"
